--- a/public/login.html
+++ b/public/login.html
@@ -15,6 +15,16 @@
   <!-- Custom styles for this template-->
   <link href="css/sb-admin.css" rel="stylesheet">
   <link href="../public/css/toaster.css" rel="stylesheet">
+  <!-- Bootstrap core CSS-->
+  <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular-route.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.7.1/angular-local-storage.js"></script>
 </head>
 
 <body class="bg-dark">
@@ -38,11 +48,11 @@
             </div>
           </div>
         </form>
-          <a class="btn btn-primary btn-block" id="register" href="#">Register</a>
-        <!--<div class="text-center">-->
-          <!--<a class="d-block small mt-3" href="register.html">Register an Account</a>-->
-          <!--<a class="d-block small" href="forgot-password.html">Forgot Password?</a>-->
-        <!--</div>-->
+          <a class="btn btn-primary btn-block" id="register" href="./index.html">Login to Orb</a>
+        <div class="text-center">
+          <a class="d-block small mt-3" href="register.html">Register an Account</a>
+          <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+        </div>
       </div>
     </div>
   </div>
@@ -55,6 +65,9 @@
   <!-- Core plugin JavaScript-->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="js/auth.js"></script>
+  <script>require('./script')</script>
+  <script>require('./services/orb')</script>
+  <script>require('./controllers/auth.controller.js')</script>
 </body>
 
 </html>
